Adicionado o endpoint post/:slug
