# swagger.json
@@ -316,6 +316,41 @@
           }
         }
       }
+    },
+    "/api/post/{slug}": {
+      "get": {
+        "tags": [
+          "Post"
+        ],
+        "description": "Obter post por slug",
+        "security": [],
+        "parameters": [
+          {
+            "name": "slug",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "meu-primeiro-post"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Post encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Post"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Post não encontrado"
+          }
+        }
+      }
     }
   },
   "components": {
